log.txt
esterlis # Mon May  1 02:32:52 IDT 2017
main.cpp: In function 'int main(int, const char**)':
main.cpp:55:5: error: expected '}' before 'else'
     else 
     ^
main.cpp:50:10: error: enumeration value 'SP_CONFIG_SUCCESS' not handled in switch [-Werror=switch]
   switch (msg)
          ^
main.cpp:50:10: error: enumeration value 'SP_CONFIG_MISSING_DIR' not handled in switch [-Werror=switch]
main.cpp:50:10: error: enumeration value 'SP_CONFIG_MISSING_PREFIX' not handled in switch [-Werror=switch]
main.cpp:50:10: error: enumeration value 'SP_CONFIG_MISSING_SUFFIX' not handled in switch [-Werror=switch]
main.cpp:50:10: error: enumeration value 'SP_CONFIG_MISSING_NUM_IMAGES' not handled in switch [-Werror=switch]
main.cpp:50:10: error: enumeration value 'SP_CONFIG_ALLOC_FAIL' not handled in switch [-Werror=switch]
main.cpp:50:10: error: enumeration value 'SP_CONFIG_INVALID_INTEGER' not handled in switch [-Werror=switch]
main.cpp:50:10: error: enumeration value 'SP_CONFIG_INVALID_STRING' not handled in switch [-Werror=switch]
main.cpp:50:10: error: enumeration value 'SP_CONFIG_INVALID_BOOLEAN' not handled in switch [-Werror=switch]
main.cpp:50:10: error: enumeration value 'SP_CONFIG_INVALID_ARGUMENT' not handled in switch [-Werror=switch]
main.cpp:50:10: error: enumeration value 'SP_CONFIG_INVALID_ENUM' not handled in switch [-Werror=switch]
main.cpp:50:10: error: enumeration value 'SP_CONFIG_INDEX_OUT_OF_RANGE' not handled in switch [-Werror=switch]
main.cpp:50:10: error: enumeration value 'SP_CONFIG_WRONG_FIELD_NAME' not handled in switch [-Werror=switch]
main.cpp:50:10: error: enumeration value 'SP_CONFIG_DOUBLE_USED_VAR' not handled in switch [-Werror=switch]
main.cpp:50:10: error: enumeration value 'SP_CONFIG_NULL_POINTER' not handled in switch [-Werror=switch]
main.cpp:50:10: error: enumeration value 'SP_CONFIG_WRITE_FAILURE' not handled in switch [-Werror=switch]
main.cpp:55:5: error: expected '}' before 'else'
     else 
     ^
main.cpp:57:5: error: break statement not within loop or switch
     break;
     ^
main.cpp:58:4: error: case label not within a switch statement
    default:
    ^
main.cpp:59:5: error: break statement not within loop or switch
     break;
     ^
main.cpp:9:6: error: unused variable 'i' [-Werror=unused-variable]
  int i, j;
      ^
main.cpp:9:9: error: unused variable 'j' [-Werror=unused-variable]
  int i, j;
         ^
main.cpp:10:13: error: unused variable 'proc' [-Werror=unused-variable]
  ImageProc* proc;
             ^
main.cpp:12:8: error: unused variable 'conf_file' [-Werror=unused-variable]
  FILE* conf_file = NULL;
        ^
main.cpp:13:8: error: unused variable 'new_image_file' [-Werror=unused-variable]
  FILE* new_image_file = NULL;
        ^
main.cpp:16:13: error: unused variable 'features' [-Werror=unused-variable]
  SPPoint*** features = NULL;
             ^
main.cpp:17:6: error: unused variable 'points_done' [-Werror=unused-variable]
  int points_done = 0;
      ^
main.cpp:19:12: error: unused variable 'total_features' [-Werror=unused-variable]
  SPPoint** total_features = NULL;
            ^
main.cpp:20:6: error: unused variable 'total_n_feature' [-Werror=unused-variable]
  int total_n_feature = 0;
      ^
main.cpp:21:7: error: unused variable 'num_feat_arr' [-Werror=unused-variable]
  int* num_feat_arr = NULL;
       ^
main.cpp:22:14: error: unused variable 'root' [-Werror=unused-variable]
  KDTreeNode* root = NULL;
              ^
main.cpp:23:6: error: unused variable 'num_of_images' [-Werror=unused-variable]
  int num_of_images;
      ^
main.cpp:24:6: error: unused variable 'pos' [-Werror=unused-variable]
  int pos = 0;
      ^
main.cpp:25:6: error: unused variable 'flag' [-Werror=unused-variable]
  int flag = 0;
      ^
main.cpp:26:6: error: unused variable 'new_n_feat' [-Werror=unused-variable]
  int new_n_feat;
      ^
main.cpp:27:8: error: unused variable 'new_image_path' [-Werror=unused-variable]
  char* new_image_path;
        ^
main.cpp:28:13: error: unused variable 'bqp' [-Werror=unused-variable]
  SPBPQueue* bqp = NULL;
             ^
main.cpp:29:12: error: unused variable 'QeuryImage' [-Werror=unused-variable]
  SPPoint** QeuryImage = NULL;
            ^
main.cpp:30:7: error: unused variable 'images_indexes' [-Werror=unused-variable]
  int* images_indexes = NULL;
       ^
main.cpp:31:6: error: unused variable 'K_close' [-Werror=unused-variable]
  int K_close;
      ^
main.cpp:32:7: error: unused variable 'is_minimal' [-Werror=unused-variable]
  bool is_minimal;
       ^
In file included from main.cpp:1:0:
main_aux.h:49:7: error: label 'CLEANUP' used but not defined
  goto CLEANUP; \
       ^
main.cpp:36:3: note: in expansion of macro 'SEND_ERROR'
   SEND_ERROR("%s", INVALID_COMMAND);
   ^
main.cpp: At global scope:
main.cpp:61:2: error: expected declaration before '}' token
  }
  ^
cc1plus: all warnings being treated as errors
make: *** [main.o] Error 1
